@@ -12,6 +12,7 @@
 - Make sure admin user has access to /call even if PolicyOmitList/AnonymousAccessList is commented
 - Add html comments around inline css and javascript
 - Add support for c.arguments on Y.io.ez() like Y.io() has
+- Added support for setting ContentType with get parameter on ezjscore/call for development use
 
 
 # v1.0.0  29 Sept 2009
